fixed z-index of modal

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,6 +6,7 @@
 	position: absolute;
 	top: 40px;
 	left: 25px;
+	padding-right: 5px;
 	width: 100%;
 	max-width: 327px;
 	height: 38px;
