--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -147,13 +147,13 @@
 
     .line3{
       display: block;
-      left:229px;
+      left: 229px;
       z-index: 1001;
     }
   
     .line4{
       display: block;
-      right: 240px;
+      right: 247px;
       z-index: 1001;
     }
 
@@ -248,7 +248,7 @@
     }
   
     .line4{
-      right: 260px;
+      right: 273px;
     }
   }
 
